hphp/hack/test/typecheck/enum_class/abstract_diamond.bad.php.exp
File "abstract_diamond.bad.php", line 16, characters 12-12:
This class must be declared `abstract`, or provide an implementation for the abstract constant `Y` (Typing[4047])
  File "abstract_diamond.bad.php", line 5, characters 19-19:
  Declaration is here
File "abstract_diamond.bad.php", line 22, characters 11-11:
Cannot reference abstract constant `H::Y` directly (Typing[4129])
  File "abstract_diamond.bad.php", line 5, characters 19-19:
  Declaration is here
